Fix a broken signal/slot connection in KPrefsWidDuration(). This was effectively blocking the KOrganizer HTML autoexport from ever being run.

Also don't continually blast the user with prompt and info dialogs
when in autoexport mode.

...and a few other nice things for the UI experience.

BUG: 302668
MERGE: 4.8,4.9
FIXED-IN: 4.8.5
(cherry picked from commit 029114107b8ef26f654ae7c2cfa0005b1072d206)